--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "reveal": "reveal-md Presentation.md --highlightTheme github --theme solarized"
+    "reveal": "node_modules/.bin/reveal-md Presentation.md --highlightTheme github --theme solarized"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Zacaria/learn-react/issues"
   },
-  "homepage": "https://github.com/Zacaria/learn-react#readme"
+  "homepage": "https://github.com/Zacaria/learn-react#readme",
+  "dependencies": {
+    "reveal-md": "0.0.32"
+  }
 }
