--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "reveal": "node_modules/.bin/reveal-md Presentation.md --highlightTheme github --theme solarized"
+    "reveal": "node_modules/.bin/reveal-md Presentation.md --highlightTheme github --theme custom"
   },
   "repository": {
     "type": "git",
