--- a/package.json
+++ b/package.json
@@ -4,7 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules/.bin/pm2 start server/pm2.json",
+    "stop": "node_modules/.bin/pm2 stops all --watch",
+    "serve": "node_modules/.bin/nodemon server/src/bin/www.js --exec babel-node",
+    "clean": "rm -rf dist/ && mkdir dist",
+    "deploy-patch": "npm version patch",
+    "deploy-minor": "npm version minor",
+    "deploy-major": "npm version major",
+    "preversion": "npm test && npm run clean && npm run dist && npm run doc && npm run git-dist",
+    "dist": "babel src -d dist",
+    "doc": "apidoc -i src/ -o doc/",
+    "git-dist": "git add --all && git commit -m \"[UP] : deploy dist\"",
+    "postversion": "git push",
+    "deploy-silent": "npm run preversion && npm run postversion",
+    "test": "NODE_ENV=test node_modules/.bin/mocha server/test -R spec --recursive --compilers js:babel-core/register",
     "reveal": "node_modules/.bin/reveal-md docs/Presentation.md --highlightTheme github --theme custom"
   },
   "repository": {
@@ -18,6 +31,22 @@
   },
   "homepage": "https://github.com/Zacaria/learn-react#readme",
   "dependencies": {
-    "reveal-md": "0.0.32"
+    "reveal-md": "0.0.32",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "helmet": "^3.2.0",
+    "morgan": "^1.7.0",
+    "pm2": "^2.2.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "browser-sync": "^2.18.2",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0"
   }
 }
