--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "start": "node_modules/.bin/pm2 start server/pm2.json",
     "stop": "node_modules/.bin/pm2 stops all --watch",
     "serve": "node_modules/.bin/nodemon server/src/bin/www.js --exec babel-node",
-    "clean": "rm -rf dist/ && mkdir dist",
+    "clean": "rm -rf server/dist/ && mkdir server/dist",
     "deploy-patch": "npm version patch",
     "deploy-minor": "npm version minor",
     "deploy-major": "npm version major",
     "preversion": "npm test && npm run clean && npm run dist && npm run doc && npm run git-dist",
-    "dist": "babel src -d dist",
-    "doc": "apidoc -i src/ -o doc/",
-    "git-dist": "git add --all && git commit -m \"[UP] : deploy dist\"",
+    "dist": "babel server/src -d server/dist",
+    "doc": "node_modules/.bin/apidoc -i server/src/ -o server/doc/",
+    "git-dist": "git add --all && git commit -m \"[UP] : bump version\"",
     "postversion": "git push",
     "deploy-silent": "npm run preversion && npm run postversion",
     "test": "NODE_ENV=test node_modules/.bin/mocha server/test -R spec --recursive --compilers js:babel-core/register",
@@ -40,6 +40,7 @@
     "pm2": "^2.2.3"
   },
   "devDependencies": {
+    "apidoc": "^0.17.3",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
