--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - "6"
   - "7"
-
+cache:
+  directories:
+  - node_modules # NPM packages
 addons:
   rethinkdb: '2.3.5'
