--- a/server/doc/api_project.json
+++ b/server/doc/api_project.json
@@ -1,14 +1,1 @@
-{
-  "name": "learn-react",
-  "version": "0.0.1",
-  "description": "",
-  "sampleUrl": false,
-  "defaultVersion": "0.0.0",
-  "apidoc": "0.3.0",
-  "generator": {
-    "name": "apidoc",
-    "time": "2017-01-19T09:12:55.031Z",
-    "url": "http://apidocjs.com",
-    "version": "0.17.3"
-  }
-}
+{  "name": "learn-react",  "version": "0.1.0",  "description": "",  "sampleUrl": false,  "defaultVersion": "0.0.0",  "apidoc": "0.3.0",  "generator": {    "name": "apidoc",    "time": "2017-01-20T15:43:28.073Z",    "url": "http://apidocjs.com",    "version": "0.17.0"  }}
