--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node_modules/.bin/pm2 start server/pm2.json",
-    "stop": "node_modules/.bin/pm2 stops all --watch",
-    "serve": "node_modules/.bin/nodemon server/src/bin/www.js --exec babel-node",
-    "clean": "rm -rf server/dist/ && mkdir server/dist",
+    "watch-client": "(cd client && gulp)",
+    "start-server": "node_modules/.bin/pm2 start server/pm2.json",
+    "stop-server": "node_modules/.bin/pm2 stops all --watch",
+    "watch-server": "(cd server && ../node_modules/.bin/nodemon src/bin/www.js --exec babel-node)",
+    "clean-server": "(cd server && rm -rf dist/ && mkdir dist)",
     "deploy-patch": "npm version patch",
     "deploy-minor": "npm version minor",
     "deploy-major": "npm version major",
-    "preversion": "npm test && npm run clean && npm run dist && npm run doc && npm run git-dist",
+    "preversion": "npm test && npm run clean-server && npm run dist && npm run doc && npm run git-dist",
     "dist": "babel server/src -d server/dist",
     "doc": "node_modules/.bin/apidoc -i server/src/ -o server/doc/",
     "git-dist": "git add --all && git commit -m \"[UP] : bump version\"",
@@ -38,18 +39,26 @@
     "helmet": "^3.2.0",
     "morgan": "^1.7.0",
     "pm2": "^2.2.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "rethinkdbdash": "^2.3.27",
     "reveal-md": "0.0.32"
   },
   "devDependencies": {
     "apidoc": "^0.17.3",
     "babel-cli": "^6.18.0",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.22.0",
     "babel-preset-stage-2": "^6.18.0",
-    "browser-sync": "^2.18.2",
+    "browser-sync": "^2.18.6",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-plumber": "^1.1.0",
     "mocha": "^3.2.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack-stream": "^3.2.0"
   }
 }
