--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "git-dist": "git add --all && git commit -m \"[UP] : bump version\"",
     "postversion": "git push",
     "deploy-silent": "npm run preversion && npm run postversion",
-    "test": "NODE_ENV=test node_modules/.bin/mocha server/test -R spec --recursive --compilers js:babel-core/register",
+    "test": "npm run test-server",
+    "test-server": "(NODE_ENV=test cd server && ../node_modules/.bin/mocha test -R spec --recursive --compilers js:babel-core/register)",
     "reveal": "(cd docs && ../node_modules/.bin/reveal-md Presentation.md --highlightTheme github --theme custom)"
   },
   "repository": {
