--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "deploy-silent": "npm run preversion && npm run postversion",
     "test": "npm run test-server",
     "test-server": "(NODE_ENV=test cd server && ../node_modules/.bin/mocha test -R spec --recursive --compilers js:babel-core/register)",
-    "reveal": "(cd docs && ../node_modules/.bin/reveal-md Presentation.md --highlightTheme github --theme custom)"
+    "reveal": "(cd docs && ../node_modules/.bin/reveal-md Presentation.md --theme custom)"
   },
   "repository": {
     "type": "git",
