--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "deploy-silent": "npm run preversion && npm run postversion",
     "test": "npm run test-server",
     "test-server": "(NODE_ENV=test cd server && ../node_modules/.bin/mocha test -R spec --recursive --compilers js:babel-core/register)",
+    "test-client": "(cd client && ../node_modules/.bin/karma start karma.conf.js --single-run )",
     "reveal": "(cd docs && ../node_modules/.bin/reveal-md Presentation.md --theme custom)"
   },
   "repository": {
@@ -56,10 +57,18 @@
     "browser-sync": "^2.18.6",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "enzyme": "^2.7.1",
     "gulp": "^3.9.1",
     "gulp-plumber": "^1.1.0",
+    "karma": "^1.4.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
+    "react-addons-test-utils": "^15.4.2",
     "webpack-stream": "^3.2.0"
   }
 }
