--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "browser-sync": "^2.18.6",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "chai-spies": "^0.7.1",
     "enzyme": "^2.7.1",
     "gulp": "^3.9.1",
     "gulp-plumber": "^1.1.0",
@@ -71,6 +72,7 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
