[ADD] surge deploy scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "React learning base",
   "scripts": {
     "start": "(cd docs && reveal-md TechNight.md -w --theme custom)",
-    "build": "(cd docs && reveal-md TechNight.md --static --theme custom)"
+    "build": "(cd docs && reveal-md TechNight.md --static --theme custom)",
+    "clean": "rimraf docs/_static",
+    "deploy": "npm run clean && cd docs && npm run build && ls && npm run copyAssets && npm run surge",
+    "copyAssets": "cp -R docs/assets docs/_static/ && cp -R docs/theme docs/_static",
+    "surge": "surge -d $npm_package_config_deploy_domain -p docs/_static"
+
   },
   "repository": {
     "type": "git",
@@ -18,5 +23,12 @@
   "homepage": "https://github.com/Zacaria/learn-react#readme",
   "dependencies": {
     "reveal-md": "0.1.2"
+  },
+  "devDependencies": {
+    "rimraf": "^2.6.1",
+    "surge": "latest"
+  },
+  "config": {
+    "deploy_domain": "havesome-react.surge.sh"
   }
 }
